// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-phone-field spec: Render logic -> should render \`placeholder\` and \`label values 1`] = `
<amplify-phone-field label="New phone *" placeholder="Enter new phone">
  <div>
    <amplify-form-field label="New phone *" type="tel">
      <div class="css-oyopam" slot="input">
        <amplify-country-dial-code></amplify-country-dial-code>
        <amplify-input fieldid="phone" name="phone" placeholder="Enter new phone"></amplify-input>
      </div>
    </amplify-form-field>
  </div>
</amplify-phone-field>
`;

exports[`amplify-phone-field spec: Render logic -> should render default values by default 1`] = `
<amplify-phone-field>
  <div>
    <amplify-form-field label="Phone Number *" type="tel">
      <div class="css-oyopam" slot="input">
        <amplify-country-dial-code></amplify-country-dial-code>
        <amplify-input fieldid="phone" name="phone" placeholder="5555555555"></amplify-input>
      </div>
    </amplify-form-field>
  </div>
</amplify-phone-field>
`;
